# ChameleonUltra

firmware/application/src/: app_cmd.c  data_cmd.h
software/script/: chameleon_cli_unit.py  chameleon_cmd.py  chameleon_enum.py
tui/: pyproject.toml
tui/src/chameleon/: __init__.py  chameleon_cli_main.py  chameleon_cli_unit.py  chameleon_cmd.py  chameleon_com.py  chameleon_utils.py  interface.py
tui/src/chameleon/commands/: __init__.py  util.py
tui/src/chameleon/commands/hf/: __init__.py  iso14443a.py  mf.py  mfu.py
tui/src/chameleon/commands/hw/: __init__.py  settings.py  slot.py
tui/src/chameleon/commands/lf/: __init__.py
tui/src/chameleon/commands/lf/em/: __init__.py  em410x.py
tui/test/: test_ultra.py
